--- a/lib-compiler/build.gradle
+++ b/lib-compiler/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile project(':lib-annotation')
     compile 'com.google.auto.service:auto-service:1.0-rc2'
     compile 'com.squareup:javapoet:1.7.0'
 }
